--- a/www/templates/deliveryman/home.html
+++ b/www/templates/deliveryman/home.html
@@ -30,6 +30,9 @@
                     <a class="item" ng-click="logout()">
                         Sair
                     </a>
+                    <a class="item" ng-click="newPassword()">
+                        Mudar senha
+                    </a>
                 </div>
             </ion-content>
         </ion-popover-view>
