--- a/www/templates/deliveryman/order.html
+++ b/www/templates/deliveryman/order.html
@@ -20,6 +20,7 @@
                         <i class="energized ion ion-alert-circled" ng-if="o.prioridade=='ALTA'"></i>
                         <i class="assertive ion ion-alert-circled" ng-if="o.prioridade=='CRITICO'"></i>
                         <i class="clear ion-alert-circled" ng-if="o.prioridade=='NORMAL'"></i>
+                        <i class="clear ion-alert-circled" ng-if="o.prioridade=='BAIXA'"></i>
                     </div>
                 </div>
                 <div class="row item-text-wrap">
