--- a/www/templates/deliveryman/password.html
+++ b/www/templates/deliveryman/password.html
@@ -1,5 +1,7 @@
 <ion-view>
-    <ion-nav-title>Nova Senha</ion-nav-title>
+    <ion-nav-bar class="bar bar-positive">
+        <ion-nav-title>Nova Senha</ion-nav-title>
+    </ion-nav-bar>
     <ion-content padding="true" class="has-header">
         <div class="list">
             <form name="newPassword">
@@ -13,17 +15,18 @@
                 </label>
                 <label class="item item-input item-floating-label">
                     <span class="input-label">Repita Nova Senha</span>
-                    <input type="password" placeholder="Repita Nova Senha" ng-model="FormValidation.Password"required>
+                    <input type="password" placeholder="Repita Nova Senha" name="Senha2" ng-model="FormValidation.Password"required>
                 </label>
-                <span class="show assertive" ng-if="(user.Password != FormValidation.Password) && (newPassword.Senha2.$dirty)">
+                <span class="show assertive" ng-if="(user.new_password != FormValidation.Password) && (newPassword.Senha2.$dirty)">
                 Senha diferente
                 </span>
-                <span class="show assertive" ng-if="(user.Password == FormValidation.Password) && (user.Password == FormValidation.Atual)">
+                <span class="show assertive" ng-if="(user.new_password == FormValidation.Atual)">
                 Nova senha precisa ser diferente da atual
               </span>
             </form>
         </div>
-        <button class="button button-full button-positive" ng-click="Salvar()" ng-disabled="newPassword.$invalid">
+        <button class="button button-full button-positive" ng-click="Salvar()" ng-disabled="newPassword.$invalid ||
+         user.new_password != FormValidation.Password || user.new_password == FormValidation.Atual">
             Salvar Senha
         </button>
     </ion-content>
