--- a/www/templates/deliveryman/order.html
+++ b/www/templates/deliveryman/order.html
@@ -1,11 +1,6 @@
 <ion-view>
     <ion-nav-title>Minhas Ordens</ion-nav-title>
-    <div class="bar bar-stable bar-subheader padding">
-        <h2 class="title" ng-click="">
-            Ver rota
-        </h2>
-    </div>
-    <ion-content class="padding has-subheader">
+    <ion-content class="padding has-header">
         <div ng-if="items.length==0" class="list card item-text-wrap">
             <p class="item-text-wrap">Não há ordens no momento</p>
         </div>
