--- a/www/templates/deliveryman/view_order.html
+++ b/www/templates/deliveryman/view_order.html
@@ -64,8 +64,7 @@
             </div>
             <div class="col">
                 <h2 class="v">Local: <a class="button button-icon ion ion-ios-location link"
-                              ng-href="{{visita.link_geo}}"
-                              onclick='window.open(this.href, "_system", "location=yes"); return false;'></a></h2>
+                              ng-click="navigateToTargetActions(geo_location)"></a></h2>
             </div>
         </div>
     </div>
