--- a/www/templates/Welcome.html
+++ b/www/templates/Welcome.html
@@ -1,19 +1,11 @@
-<ion-view class="screensBackground" hide-nav-bar="true">
+<ion-view class="screensBackgroundHome" hide-nav-bar="true">
     <ion-content padding="true">
-        <div>
-            <div style="width:100%; text-align:center; margin-bottom:40px; position: relative;">
-
-                <br>
-                <h2 style="text-align:center; font-size:24px;color: #fff;">Seja bem-vindo.</h2>
-            </div>
-            <div ng-click="Entrar()" style="width:100%; text-align:center;">
-                <img class="relative" src="img/logo2.png" style="top: -20px; max-width:220px;" >
-                <h4 style="color: #fff">SUAS ORDENS A UM CLICK</h4>
-            </div>
-
-            <p class="text-center" style="margin-top:30px;">
-                <a class="button button-light button-outline" ng-click="entrar()">clique para entrar</a>
-            </p>
+        <div class="button-home">
+            
+                <a class="button button-positive" ng-click="entrar()">Clique para entrar</a>
+           
+                <!--<a class="button button-positive button-full" ng-click="entrar()">Clientes</a>-->
+            
         </div>
     </ion-content>
 </ion-view>
