--- a/www/templates/deliveryman/home.html
+++ b/www/templates/deliveryman/home.html
@@ -6,7 +6,7 @@
     <ion-content padding="true" class="has-header">
         <div class="col card" ng-if="user.sup_monitor!=0">
             <ion-item class="item-icon-left" ui-sref="deliveryman.attendance">
-                <i class="icon ion-settings"></i>Atendimentos pendentes
+                <i class="icon ion-lock-combination"></i>Atendimentos pendentes
                 <span class="badge badge-assertive" ng-if="countAt > 0">{{countAt}}</span>
             </ion-item>
         </div>
